--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "es6-promise": "^4.2.6",
     "express": "^4.16.4",
+    "formik": "^1.5.1",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1"
