--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/register": "^7.0.0",
+    "cookie-parser": "^1.4.4",
     "es6-promise": "^4.2.6",
     "express": "^4.16.4",
     "formik": "^1.5.1",
