--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "eslint": "^5.15.1",
     "eslint-config-fortech-react": "^1.0.2",
     "eslint-plugin-compat": "^2.7.0",
@@ -26,6 +27,8 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "mini-css-extract-plugin": "^0.5.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
@@ -35,6 +38,7 @@
     "es6-promise": "^4.2.6",
     "express": "^4.16.4",
     "formik": "^1.5.1",
+    "ignore-styles": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
