--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "spectre.css": "^0.5.8"
   }
 }
