--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "build-production": "NODE_ENV=production webpack --progress",
     "compile": "webpack --watch --info-verbosity verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
