--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "dotenv": "^7.0.0",
     "eslint": "^5.15.1",
     "eslint-config-fortech-react": "^1.0.2",
     "eslint-plugin-compat": "^2.7.0",
