--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon NODE_ENV=development index.js",
+    "start": "nodemon index.js",
     "build-production": "NODE_ENV=production webpack --progress",
     "compile": "NODE_ENV=development webpack --watch --info-verbosity verbose",
     "test": "echo \"Error: no test specified\" && exit 1"
