--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
-    "spectre.css": "^0.5.8"
+    "spectre.css": "^0.5.8",
+    "yup": "^0.27.0"
   }
 }
